// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Getting chart data should create series from single measure 1`] = `
Object {
  "categories": Array [
    undefined,
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 118,
        },
      ],
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;

exports[`Getting chart data should create series from single measure and attribute 1`] = `
Object {
  "categories": Array [
    "",
    "Churned",
    "N/A",
    "OK",
    "Potentially Churned / Salesforce Issues",
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 25,
        },
        Object {
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 153,
        },
        Object {
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 27,
        },
      ],
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;
